# DOM_EXPv2

./: .gitignore  PATCH_BATCH_2_INSTRUCTIONS.md  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  pyproject.toml  requirements.txt  v2README.md
api/: index.py
config/: env.example
docs/: ARCHITECTURE.md  CONTRACTS.md  OPS_RUNBOOK.md  README.md  TAXONOMY.md
docs/architecture/: architecture_v2_contract.md
docs/captorator/: dev_log_v1.md  template_composition_briefing_v1.md
docs/db/: pcs_db_readme_v1_reference.md
docs/env/: SECRETS_HANDLING.md  env_recovery_guide_v1.md  env_recovery_summary_v1.md
docs/fixtures/: README.md  metrics_import_ready_v1.csv
docs/history/: v1_changelog.md
docs/nearsight/: changelog_v1.md
docs/ops/: checklist_v2.md  deployment_v1_reference.md  setup_local_v1_reference.md  vercel_deployment_v1_reference.md  vps_master_briefing_v1_reference.md
docs/reference_v1/: readme_v1_reference.md
domain_expansion/: main.py
domain_expansion/app/: config_spec.py  dependencies.py  settings.py
domain_expansion/app/db/: session.py
domain_expansion/app/integrations/: runner_client.py
domain_expansion/app/models/: __init__.py  ops.py
domain_expansion/app/routers/: ops.py
domain_expansion/app/startup/: contract_guard.py
runner/: main.py  settings.py
runner/jobs/: __init__.py
scripts/: audit_config.py  bootstrap_schema.py  repair_env.py
tests/: test_smoke.py
