[project]
name = "domain-expansion"
version = "2.0.0"
description = "DOMAIN_EXPANSION control plane + runner"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "SQLAlchemy>=2.0",
  "psycopg[binary]>=3.1",
  "python-multipart>=0.0.9",
  "jinja2>=3.1",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
